--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,22 @@
 {
   "version": 2,
+  "buildCommand": "npm install",
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 30
+      }
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
-  ]
+    {
+      "src": "/(.*)",
+      "dest": "api/index.js"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
